# crossword_generator

./: .gitignore  AGENTS.md  README.md  debug_main.py  main.py  pyproject.toml
.claude/skills/clue-generation/: SKILL.md
.claude/skills/cpsat-fill/: SKILL.md
.claude/skills/dictionary/: SKILL.md
.claude/skills/generator-pipeline/: SKILL.md
.claude/skills/grid-layout/: SKILL.md
.claude/skills/persistence/: SKILL.md
.claude/skills/theme-words/: SKILL.md
crossword/: __init__.py
crossword/core/: __init__.py  constants.py  exceptions.py  models.py
crossword/data/: __init__.py  definition_store.py  dictionary.py  normalization.py  preprocess.py  theme.py  theme_cache.py
crossword/engine/: __init__.py  crossword_store.py  generator.py  grid.py  solver.py  validator.py
crossword/io/: __init__.py  clues.py  definition_fetcher.py  dict_api_fetcher.py  gemini_client.py  prompt_log.py
crossword/utils/: __init__.py  logger.py  pretty.py
feature_plans/: compact_firestore_storage.md  difficulty_feature_initial_plan.md  difficulty_implementation_record.md  gemini_generators_upgrade.md  hybrid_theme_words_input.md  resume_from_filled.md  theme_type_upgrade.md
feature_plans/pending/: rl_environment_assignment.md  web-backend-generate.md
tests/: test_dictionary.py  test_grid.py  test_theme.py
web/: prototype.html
