[tool.poetry]
name = "romanian-cryptic-crossword"
version = "0.1.0"
description = "Advanced Romanian cryptic barred crossword generator"
authors = ["Project Author <author@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ortools = ">=9.8"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crossword-gen = "main:main"
